little refactor and started authorize endpoint methods

--- a/web/login/index.html
+++ b/web/login/index.html
@@ -30,7 +30,7 @@
                             </div>
                             <div>
                                 <label htmlFor="password" class="sr-only">Password</label>
-                                <input id="password" name="password" type="password" minLength={8} autoComplete="current-password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-green-600 focus:border-green-600 focus:z-10 sm:text-sm" placeholder="Password" />
+                                <input id="password" name="password" type="password" minLength="8" autoComplete="current-password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-green-600 focus:border-green-600 focus:z-10 sm:text-sm" placeholder="Password" />
                             </div>
                         </div>
 
