--- a/web/error/index.html
+++ b/web/error/index.html
@@ -26,6 +26,13 @@
                         Error description : <span class="text-green-700">{{.Description}}</span> 
                     </p>
                 </div>
+
+                <form action="/" class="flex justify-center">
+                    <button type="submit" class="group relative w-1/2 py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-green-700 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                        Home
+                    </button>
+                </form>
+                
                 
             </div>
         </div>
